--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
@@ -10,6 +10,8 @@
   --color-black: #000;
   --color-white: #fff;
   --color-gray: #b0afaf;
+  --color-gray-medium-2: #d0d0d0;
+  --color-gray-medium: #e1e1e1;
   --color-gray-light: #f5f5f5;
   --color-gray-dark: #272727;
   --color-gray-dark-1: #232323;
@@ -20,7 +22,7 @@
   --color-purple: #3d2859;
   --color-purple-dark: #1f0640;
   --color-blue: #408e9f;
-  --color-blue-darker: #4390A1;
+  --color-blue-darker: #4390a1;
   --color-blue-ice: #85cddb;
   --color-blue-light: #f2fafc;
   --color-yellow: #ffce42;
@@ -28,7 +30,7 @@
   --color-yellow-dark: #f2b300;
   --color-orange: #f69e4b;
   --color-orange-dark: #e08a39;
-  --color-apricot: #F0846E;
+  --color-apricot: #f0846e;
   --color-green: #008c5d;
   --color-green-dark: #1c6153;
 
