--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
@@ -31,7 +31,7 @@
     <div class="header__inner">
       {{ elements.site_branding }}
       {{ elements.mainnavigation }}
-      <div class="burger" id="js-burger">
+      <div class="burger hamburger-icon" id="hamburger-icon">
         <div class="burger__lines">
           <span></span>
           <span></span>
