--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/burger.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/burger.css
@@ -12,7 +12,7 @@
   font-size: var(--base-font-size-extra-small);
   cursor: pointer;
 
-  @media (--viewport-md-min) {
+  @media (--viewport-lg-min) {
     display: none;
   }
 
@@ -31,6 +31,7 @@
   }
 
   &__label {
+    display: none;
     margin-left: 15px;
     font-weight: 300;
     font-size: var(--base-font-size-extra-small);
