--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/burger-menu.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/burger-menu.css
@@ -1,242 +1,313 @@
 /**
- * Type: Organisms.
+ * @file
  * Burger menu.
  */
 
-/* When user is logged in, we remove fixed from burger-menu */
-body.adminimal-admin-toolbar .burger-menu--open {
-  position: absolute;
-  top: 39px;
-}
+.burger-menu--overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 200;
+  height: 100%;
+  transition-duration: .3s;
+  transition-property: transform, box-shadow;
 
-body.adminimal-admin-toolbar.toolbar-tray-open .burger-menu {
-  position: absolute;
-  top: 79px;
-}
-
-@media (--viewport-md-min) {
-  /* When user is logged in, we change position of secondary menu in burger menu */
-  body.adminimal-admin-toolbar .burger-menu-list--secondary {
-    top: 41px;
+  .toolbar-horizontal &,
+  .toolbar-vertical & {
+    top: 39px;
   }
-}
 
-/* When user is logged in, we change height for burger menu inner element */
-body.adminimal-admin-toolbar .burger-menu__inner {
-  height: calc(100vh - 39px);
-}
+  .toolbar-horizontal.toolbar-tray-open & {
+    top: 79px;
+  }
 
-body.adminimal-admin-toolbar.toolbar-tray-open .burger-menu__inner {
-  height: calc(100vh - 79px);
+  &::before {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    background: var(--color-black);
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity .3s;
+    transition-delay: .1s;
+    content: "";
+    pointer-events: none;
+  }
+
+  &__active {
+    width: 100%;
+    transform: translate3d(-100%, 0, 0);
+
+    @media (--viewport-ms-min) {
+      transform: translate3d(-320px, 0, 0);
+    }
+
+    @media (--viewport-md-min) {
+      transform: translate3d(-350px, 0, 0);
+    }
+
+    &::before {
+      opacity: .3;
+      pointer-events: all;
+    }
+  }
 }
 
 .burger-menu {
-  position: fixed;
+  position: absolute;
   top: 0;
-  left: 0;
-  z-index: 200;
-  width: 100vw;
-  height: 100vh;
+  right: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   overflow-y: auto;
-  background-color: white;
-  box-shadow: 0 25px 50px 0 rgb(0 0 0 / 10%);
-  transform: translateX(-100px);
-  opacity: 0;
-  transition: transform .4s, opacity .4s;
-  pointer-events: none;
-  will-change: transform;
+  background: var(--color-gray-light);
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 10%);
+  transform: translate3d(100%, 0, 0);
+
+  @media (--viewport-ms-min) {
+    width: 320px;
+  }
 
   @media (--viewport-md-min) {
-    width: 90vw;
-  }
-
-  &__inner {
-    padding: 100px 0;
-  }
-
-  &__close {
-    position: absolute;
-    top: 40px;
-    right: 40px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
-    color: var(--color-gray);
-    font-weight: 300;
-    font-size: var(--base-font-size);
-    cursor: pointer;
-
-    .icon--close {
-      width: 20px;
-      height: 20px;
-      margin-left: 15px;
-    }
-  }
-
-  &--open {
-    transform: translateX(0);
-    opacity: 1;
-    pointer-events: auto;
-  }
-
-  &__logo {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-
-    @media (--viewport-md-min) {
-      display: none;
-    }
+    width: 350px;
   }
 }
 
-.burger-menu-list {
+.burger-nav::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 30px;
+  content: "";
+}
+
+.burger-nav-item {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  margin: 0 0 30px;
-  padding: 0;
-  color: var(--color-black);
-  font-weight: 900;
-  font-size: var(--base-font-size-xxlarge);
-  line-height: 1.3;
-  list-style: none;
+  display: block;
 
-  @media (--viewport-md-min) {
-    max-width: 240px;
-  }
-
-  &__label {
-    display: none;
-    margin-bottom: 21px;
-    color: var(--color-gray);
-    font-weight: 300;
-    font-size: var(--base-font-size);
-    line-height: 1.3;
-
-    @media (--viewport-md-min) {
-      display: block;
-    }
-  }
-
-  &--secondary {
-    max-height: 0;
-    margin-bottom: 0;
-    margin-left: 20px;
-    font-weight: 900;
-    font-size: var(--base-font-size-large);
-    line-height: 1.3;
-    transform: translateX(-10px);
-    visibility: hidden;
-    opacity: 0;
-    transition: all .3s;
-
-    @media (--viewport-md-min) {
-      position: absolute;
-      top: 0;
-      left: 300px;
-      max-height: initial;
-      margin-left: 0;
-    }
-
-    .burger-menu-list__label {
-      position: absolute;
-      top: -40px;
-    }
-  }
-
-  &--highlighted {
-    color: var(--color-gray);
-    font-weight: 700;
-    font-size: var(--base-font-size-medium);
-    line-height: 1.3;
-  }
-}
-
-.burger-menu-list-item {
-  display: flex;
-  flex-direction: column;
-  font-family: var(--heading-font-family);
-
-  @media (--viewport-md-min) {
-    display: block;
-  }
-
-  &--active,
-  &:hover {
-    > .burger-menu-list-item__link::after {
-      @media (--viewport-md-min) {
-        opacity: 1;
-      }
-    }
-  }
-
-  &__link {
-    position: relative;
+  a {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
-    color: currentcolor;
+    margin: 0 90px 0 45px;
+    padding: 13px 0;
+    color: var(--color-gray-dark);
+    font-weight: var(--base-font-weight);
+    font-size: var(--base-font-size-small);
+    font-family: var(--base-font-family);
+    line-height: 20px;
     text-decoration: none;
 
-    &::after {
-      position: absolute;
-      top: 50%;
-      left: -20px;
-      display: block;
-      width: 10px;
-      height: 10px;
-      background: var(--color-primary);
-      border-radius: 50%;
-      transform: translateY(-50%);
-      opacity: 0;
-      transition: opacity .3s;
-      content: "";
+    svg {
+      margin-right: 8px;
     }
+  }
+}
 
-    .icon--arrow-line-down {
-      width: 40px;
-      height: 40px;
-      margin-left: 5px;
-      padding: 8px;
-      transition: transform .3s;
-      will-change: transform;
-      fill: var(--color-primary);
+.burger-nav-item--mobile-header {
+  padding: 13px 45px;
+  color: var(--color-gray-dark);
+  font-weight: var(--heading-font-weight);
+  font-size: var(--base-font-size-small);
+  font-family: var(--heading-font-family);
+  line-height: 20px;
+  text-decoration: none;
+}
 
-      @media (--viewport-md-min) {
-        position: relative;
-        left: 0;
-      }
+.burger-nav {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 100%;
+  width: 200%;
+  margin: 0;
+  padding: var(--header-height-mobile) 100% 0 0;
+  overflow: hidden;
+  overflow-y: auto;
+  list-style-type: none;
+  transition: left .3s ease 0s;
+
+  &--level-0,
+  &__open {
+    left: 0;
+    overflow-y: visible;
+  }
+
+  &--level-0 {
+    position: relative;
+    top: auto;
+    bottom: auto;
+
+    & > .burger-nav-item > a {
+      font-weight: var(--heading-font-weight);
     }
   }
 
-  &.open-sub-navigation {
-    color: var(--color-primary);
+  &--level-1 {
+    z-index: 1;
+    padding-left: 30px;
 
-    .burger-menu-list--secondary {
-      width: 100%;
-      max-height: none;
-      transform: translateX(0);
-      visibility: visible;
-      opacity: 1;
+    &::before {
+      background: var(--color-gray-medium);
+    }
+  }
 
-      @media (--viewport-md-min) {
-        max-height: initial;
-      }
+  &--level-2 {
+    z-index: 2;
+    padding-left: 30px;
+
+    &::before {
+      background: var(--color-gray-medium-2);
+    }
+  }
+
+  &--level-3 {
+    z-index: 3;
+    padding-left: 30px;
+
+    &::before {
+      background: var(--color-gray);
+    }
+  }
+
+  &__parent {
+    & > .burger-nav-item--arrow-left {
+      pointer-events: none;
+    }
+  }
+}
+
+.quick-links__list {
+  position: relative;
+  margin-top: 15px;
+  padding: 20px 45px var(--header-height-mobile);
+  list-style-type: none;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    right: 45px;
+    left: 45px;
+    height: 1px;
+    background-color: var(--color-gray-medium-2);
+    content: "";
+  }
+
+  @media (--viewport-md-min) {
+    padding: 20px 45px var(--header-height);
+  }
+}
+
+.quick-links__item {
+  position: relative;
+  display: block;
+
+  a {
+    position: relative;
+    display: block;
+    padding: 8px 0;
+    color: var(--color-gray-dark);
+    font-weight: var(--base-font-weight);
+    font-size: var(--base-font-size-small);
+    font-family: var(--base-font-family);
+    line-height: 20px;
+    text-decoration: none;
+  }
+}
+
+.burger-menu--close {
+  position: absolute;
+  top: 20px;
+  right: 15px;
+  z-index: 10;
+  width: 32px;
+  height: 32px;
+  margin-right: auto;
+  margin-left: auto;
+  cursor: pointer;
+
+  & span {
+    position: absolute;
+    left: 3px;
+    display: block;
+    width: 24px;
+    height: 2px;
+    background: var(--color-gray-dark);
+    border-radius: 2px;
+    transition: all .2s ease-in-out;
+
+    &:nth-child(1) {
+      top: 15px;
+      transform: rotate(45deg);
     }
 
-    .icon--arrow-line-down {
-      transform: rotate(-90deg);
-
-      @media (--viewport-md-min) {
-        transform: rotate(-90deg) translateY(5px);
-      }
+    &:nth-child(2) {
+      top: 15px;
+      transform: rotate(-45deg);
     }
+  }
+}
+
+.burger-nav-item--arrow-right {
+  position: absolute;
+  top: 3px;
+  right: 45px;
+  display: block;
+  width: 40px;
+  height: 40px;
+  padding: 0 10px;
+  background: var(--color-pink);
+  border-radius: 50%;
+  cursor: pointer;
+
+  &::after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: 12px;
+    height: 12px;
+    margin-left: -2px;
+    border-top: 2px solid var(--color-purple);
+    border-right: 2px solid var(--color-purple);
+    transform: translate(-50%, -50%) rotate(45deg);
+    content: "";
+  }
+}
+
+.burger-nav-item--arrow-left {
+  position: absolute;
+  top: calc(var(--header-height-mobile) + 3px);
+  left: 10px;
+  display: block;
+  width: 40px;
+  height: 40px;
+  padding: 0 7px 0 8px;
+  background: var(--color-pink);
+  border-radius: 50%;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 10%);
+  cursor: pointer;
+
+  @media (--viewport-md-min) {
+    top: calc(var(--header-height) + 3px);
+  }
+
+  &::after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: 12px;
+    height: 12px;
+    margin-left: 2px;
+    border-bottom: 2px solid var(--color-purple);
+    border-left: 2px solid var(--color-purple);
+    transform: translate(-50%, -50%) rotate(45deg);
+    content: "";
   }
 }
