--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
@@ -21,67 +21,87 @@ body.adminimal-admin-toolbar header.header {
   box-shadow: 0 25px 75px rgb(0 0 0 / 10%);
 
   &__inner {
+    position: relative;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    height: var(--header-height-mobile);
+    height: 120px;
+
+    @media (--viewport-ms-min) {
+      flex-wrap: nowrap;
+      height: var(--header-height-mobile);
+
+      .burger {
+        order: 2;
+      }
+    }
 
     @media (--viewport-md-min) {
       justify-content: flex-end;
       height: var(--header-height);
     }
+  }
+}
 
-    .burger {
-      order: 2;
+.header-search {
+  display: flex;
+  width: 100%;
 
-      @media (--viewport-md-min) {
-        order: 0;
-      }
+  @media (--viewport-ms-min) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    max-width: 210px;
+    transform: translate(-50%, -50%);
+  }
+
+  @media (--viewport-lg-min) {
+    position: relative;
+    top: auto;
+    left: auto;
+    display: flex;
+    margin: auto;
+    transform: translate(0);
+  }
+
+  &__input-field {
+    position: relative;
+    width: 100%;
+    height: 42px;
+    padding: 11px 50px 11px 20px;
+    background: var(--color-white);
+    border: 1px solid var(--color-blue);
+    border-radius: 24px;
+
+    & .input {
+      height: 100%;
+      padding: 0;
+      font-size: var(--base-font-size-small);
+      border: none;
     }
   }
 
-  &-search {
-    display: flex;
-    max-width: 210px;
-    margin: auto;
+  &__submit {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    width: 34px;
+    height: 34px;
+    padding: 10px;
+    background: var(--color-blue);
+    border-radius: 50%;
+    cursor: pointer;
 
-    &__input-field {
-      position: relative;
-      width: 100%;
-      height: 42px;
-      padding: 11px 50px 11px 20px;
-      background: var(--color-white);
-      border: 1px solid var(--color-blue);
-      border-radius: 24px;
-
-      & .input {
-        height: 100%;
-        padding: 0;
-        font-size: var(--base-font-size-small);
-        border: none;
-      }
+    & svg.icon {
+      width: 14px;
+      height: 14px;
+      fill: var(--color-white);
     }
+  }
 
-    &__submit {
-      position: absolute;
-      top: 3px;
-      right: 3px;
-      width: 34px;
-      height: 34px;
-      padding: 10px;
-      background: var(--color-blue);
-      border-radius: 50%;
-      cursor: pointer;
-
-      & svg.icon {
-        width: 14px;
-        height: 14px;
-        fill: var(--color-white);
-      }
-    }
-
-    form {
-      position: relative;
-    }
+  form {
+    position: relative;
+    width: 100%;
   }
 }
