--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -81,3 +81,15 @@ figure {
   top: -10px;
   right: -15px;
 }
+
+table {
+  border: 1px solid;
+}
+
+tr {
+  border: 1px solid;
+}
+
+td {
+  border: 1px solid;
+}
