--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--full.html.twig
@@ -94,7 +94,7 @@
             } %}
           {% endif %}
           <div class="news-page__description">
-            {{ node.field_description.value|t }}
+            {{ node.field_description.value }}
           </div>
           <div class="news-page__image">
             {{ content.field_news_image }}
