--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -7,6 +7,19 @@
    height: 160px;
   }
 
+  &__button-below-wrapper {
+    display: flex;
+    justify-content: center;
+    a {
+      text-decoration: none;
+      min-width: 70%;
+    }
+  }
+
+  &__button-below {
+    width: 100%;
+  }
+
   &__title {
     padding: 6px 15px;
     color: var(--color-purple);
@@ -45,9 +58,11 @@
   &__content-item-label {
     min-width: 85px;
     font-weight: var(--heading-font-weight);
+
     &-author-image {
       width: 85px;
       margin-right: 20px;
+
       img {
         width: 100%;
       }
