--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -272,7 +272,14 @@
               {{ inspirations }}
             </div>
           </div>
-        {% endif%}
+        {% endif %}
+        <div class="facts-box__button-below-wrapper">
+          {% if atom_str('text-of-button-below-fact-boxes') %}
+            <a href="{{ atom_str('link-of-button-below-fact-boxes') }}" target="_blank">
+              <button type="button" class="facts-box__button-below button button--green">{{ atom('text-of-button-below-fact-boxes') }}</button>
+            </a>
+          {% endif %}
+        </div>
       </div>
     </div>
     {% if related %}
