SIS:198: read More button added to the seasonal wheel at the bottom.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
@@ -100,6 +100,11 @@
     }
   }
 
+.read-more {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+}
   /* Modal Style */
 
   .modal {
