--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -272,6 +272,12 @@
 		</div>
 		<div class="months-activity-cards">{{ content.articles }}</div>
 	</div>
+	<div class="row">
+		<div class="col-xs-12 read-more">
+			{{ see_more }}
+		</div>
+	</div>
+
 </div>
 
 {# MODAL #}
