Breadcrumb + migration fixes

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-teaser.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-teaser.html.twig
@@ -1,5 +1,7 @@
 {{ attach_library('sis/lexicon') }}
 <div{{ attributes.addClass('lexicon-teaser') }}>
+  {{ title_prefix }}
+  {{ title_suffix }}
   <div class="row">
     <div class="col-xs-12 col-md-6 col-lg-5">
       <h2 class="lexicon-teaser__title">{{ atom('lexicon-block-headline') }}</h2>
