--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/list-element.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/list-element.html.twig
@@ -1,11 +1,10 @@
+
 {% if children %}
   <div class="inspiration-overview__list-links">
     <div class="inspiration-overview__headline">{{ list_headline }}</div>
     <ul class="inspiration-overview__list">
       {% for child in children %}
-        {% if child.id %}
-          <li class="inspiration-overview__list-item"><a class="inspiration-overview__list-item-link" href="{{ path('entity.node.canonical', {'node': child.id}) }}">{{ child.label }}</a></li>
-        {% endif %}
+        {{ child }}
       {% endfor %}
     </ul>
     <a class="inspiration-overview__more-link" href="{{ path('entity.taxonomy_term.canonical', {'taxonomy_term': article_type.id}) }}">
