--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -32,6 +32,7 @@
     margin-bottom: 44px;
     padding-right: var(--container-spacing-mobile);
     padding-left: var(--container-spacing-mobile);
+    overflow: hidden;
 
     @media (--viewport-ms-min) {
       flex: 0 0 50%;
@@ -52,7 +53,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    /*overflow: hidden;*/
   }
 
   &__item-inner {
@@ -211,6 +212,10 @@
     display: inline-block;
     padding: 8px 0;
     text-decoration: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 100%;
 
     &:hover {
       text-decoration: underline;
