--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
@@ -42,6 +42,10 @@ body.adminimal-admin-toolbar header.header {
       height: var(--header-height);
     }
   }
+
+  @media print {
+    display: none;
+  }
 }
 
 .header-search {
