--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--inline-navigation.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--inline-navigation.html.twig
@@ -26,6 +26,7 @@
  */
 #}
 {{ attach_library('sis/inline-navigation') }}
+{{ attach_library('sis/slider-pager-count') }}
 
 <div{{ attributes.addClass('inline-navigation') }}>
   {{ title_prefix }}
@@ -33,14 +34,13 @@
   <ul class="inline-navigation__list js-inline-navigation-slider">
     {{ content }}
   </ul>
-  <div class="inline-navigation__pager-count">
+  <div class="slider-pager-count sm-hidden md-hidden lg-hidden xl-hidden">
     {{ 'Showing'|t }}
-    <span class="inline-navigation__pager-count--showing">
-      <span class="inline-navigation__pager-count--showing-xs">1</span>
-      <span class="inline-navigation__pager-count--showing-ms">2</span>
+    <span class="slider-pager-count--showing">
+      <span class="ms-hidden sm-hidden md-hidden lg-hidden xl-hidden">1</span>
+      <span class="xs-hidden sm-hidden md-hidden lg-hidden xl-hidden">2</span>
     </span>
     {{ 'out of'|t }}
-    <span class="inline-navigation__pager-count--total">{{ content|length }}
-    </span>
+    <span class="slider-pager-count--total">{{ content|length }}</span>
   </div>
 </div>
