--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/sub-navigation.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/sub-navigation.css
@@ -8,7 +8,7 @@
   top: 100%;
   left: 0;
   width: 100%;
-  background-color: var(--color-blue-light);
+  background-color: var(--color-gray-light);
   box-shadow: 0 25px 50px 0 rgb(0 0 0 / 10%);
   transform: scaleY(0);
   transform-origin: top;
