--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/term-overview.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/term-overview.html.twig
@@ -1,7 +1,7 @@
 {{ attach_library('sis/inspiration-overview') }}
 <section class="section section--spacing-top-medium section--spacing-bottom-none">
+  {{ breadcrumb }}
   <div class="container">
-    <div class="breadcrumb"></div>
     <div class="row">
       <div class="inspiration-overview__pageheader col-xs-12">
         {{ title_prefix }}
