--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/taxonomy-term--article-types.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/taxonomy-term--article-types.html.twig
@@ -23,6 +23,7 @@
  * @see template_preprocess_taxonomy_term()
  */
 #}
+{{ breadcrumb }}
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
