SIS2-170: Fixed pager, and term overview

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/term-overview.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/term-overview.html.twig
@@ -1,5 +1,5 @@
 {{ attach_library('sis/inspiration-overview') }}
-<section class="section section--spacing-top-medium section--spacing-bottom-none">
+<section class="section section--spacing-top-medium section--spacing-bottom-none js-term-overview">
   {{ breadcrumb }}
   <div class="container">
     <div class="row">
