--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -36,7 +36,7 @@
     justify-content: center;
     padding: 48px;
     background-color: var(--color-blue);
-    background-image: url("../../../../../dist/images/goto-map-cta-bg.svg");
+    background-image: url('../../../../../dist/images/goto-map-cta-bg.svg');
     background-repeat: no-repeat;
     background-position: left bottom;
     background-size: contain;
@@ -74,7 +74,8 @@
         height: 100%;
         padding: 44px;
         color: var(--color-white);
-        background: var(--color-blue-darker) url("../../../../images/dk-map.svg") no-repeat bottom left;
+        background: var(--color-blue-darker)
+          url('../../../../images/dk-map.svg') no-repeat bottom left;
       }
 
       .inspiration-overview__item-title {
@@ -117,7 +118,7 @@
       width: 100%;
       height: 49px;
 
-      input[type="search"] {
+      input[type='search'] {
         height: 100%;
         border-color: var(--theme-input-border-dark);
         border-radius: 25px;
@@ -150,10 +151,42 @@
     &-label {
       margin-right: 13px;
       font-size: var(--base-font-size-small);
+
+      @media (--viewport-ms-max) {
+       display: none;
+      }
     }
 
     .form-item {
       margin-bottom: 0;
+    }
+
+    &__filter-button {
+      margin-right: 20px;
+      display: block;
+      align-items: center;
+      position: relative;
+      padding: 16px 24px 14px 62px;
+      color: currentcolor;
+      font-weight: var(--button-font-weight);
+      font-size: var(--base-font-size-small);
+      font-family: var(--base-font-family);
+      border: 1px solid var(--theme-input-border-dark);
+      border-radius: 30px;
+      cursor: pointer;
+
+      @media (--viewport-sm-min) {
+        display: none;
+      }
+    }
+
+    .icon--filter-icon {
+      position: absolute;
+      width: 21px;
+      height: 21px;
+      left: 24px;
+      top: 50%;
+      transform: translateY(-50%);
     }
   }
 
@@ -165,7 +198,7 @@
     .js-form-item {
       display: none;
 
-      &:nth-child(-n+4) {
+      &:nth-child(-n + 4) {
         display: block;
       }
     }
@@ -201,3 +234,58 @@
   }
 }
 
+.overview-form__search-filters__mobile-header {
+  display: none;
+}
+
+@media (--viewport-ms-max) {
+    .overview-form__search-filters__mobile-header {
+      display: flex;
+      position: -webkit-sticky; /* Safari */
+      position: sticky;
+      background-color: var(--color-blue);
+      color: white;
+      padding: 20px;
+      font-size: var(--base-font-size-medium);
+      font-weight: 800;
+      justify-content: space-between;
+      z-index: 7;
+
+      & .icon--close {
+        height: 20px;
+        width: 20px;
+        fill: white;
+      }
+    }
+
+  .overview-form__search-filters {
+    z-index: 1000;
+    background: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+
+    &--active {
+      display: block;
+    }
+
+    .accordion-buttons {
+      display: none;
+    }
+
+    .accordion {
+      padding: 0 20px 20px;
+      overflow: auto;
+      top: 68px;
+      bottom: 0;
+      z-index: 5;
+      position: absolute;
+      overflow-y: scroll;
+      width: 100%;
+      overflow-x: hidden;
+    }
+  }
+}
