--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--sis-search-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--sis-search-page.html.twig
@@ -34,12 +34,30 @@
     </div>
     <div class="row">
       <div class="col-xs-12 overview-form__toolbar">
+        <span class="overview-form__toolbar__filter-button js-overview-form__toolbar__filter-button">
+          {% include '@reusable-component/svg-icon.twig' with {
+            'attributes': '',
+            'svgIconName': 'filter-icon'
+          } %}
+          {{ "Filter"|t }}
+        </span>
         <span class="overview-form__toolbar-label">{{ "Sorted by"|t }}:</span>{{ element['facets'].sort }}
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-md-3">
-        <div class="overview-form__search-filters">
+      <div class="col-xs-12 col-sm-3">
+        <div class="overview-form__search-filters js-overview-form__search-filters">
+        <div class="overview-form__search-filters__mobile-header">
+         <div>
+          {{ "Filter"|t }}
+         </div>
+          <div class="js-search-filters-close">
+            {% include '@reusable-component/svg-icon.twig' with {
+              'attributes': '',
+              'svgIconName': 'close'
+            } %}
+          </div>
+        </div>
           <div class="accordion js-accordion">
             <div class="accordion__items">
               <div class="accordion-buttons">
@@ -55,11 +73,14 @@
               {{ element['facets'].field_location }}
               {{ element['facets'].field_season }}
               {{ element['facets'].field_subject }}
+
             </div>
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-9">
+      <div class="col-xs-12 col-sm-9">
+
+
         <div class="row">
           {{ element['content']|without('total') }}
         </div>
