--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/layout/grid.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/layout/grid.css
@@ -14,6 +14,10 @@
     padding-bottom: var(--grid-section-spacing);
   }
 
+  &--no-z-index {
+    z-index: auto;
+  }
+
   &-form {
     z-index: 11;
   }
