--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
@@ -1,4 +1,8 @@
 .entity-slideshow {
+  &-wrapper {
+    width: 100%;
+  }
+
   &__pageheader-headline {
     margin-bottom: 24px;
   }
@@ -56,11 +60,11 @@
   }
 
   &__item-inner {
+    position: relative;
     display: flex;
     flex-direction: column;
     height: 100%;
     background-color: #fff;
-    position: relative;
   }
 
   &__item-link {
@@ -78,6 +82,7 @@
     min-height: 25px;
 
     img {
+      display: block;
       width: 100%;
     }
   }
@@ -116,7 +121,7 @@
       grid-template-columns: repeat(2, 1fr);
       width: 100%;
       padding: 28px 38px;
-      background-color: rgba(62, 62, 62, 75%);
+      background-color: rgb(62 62 62 / 75%);
     }
   }
 
@@ -145,15 +150,15 @@
     line-height: 1.3;
 
     &--authoring-information {
-       padding-left: 20px;
-       font-size: var(--base-font-size-small);
-       margin-top: 10px;
-       font-weight: normal;
-     }
+      margin-top: 10px;
+      padding-left: 20px;
+      font-weight: normal;
+      font-size: var(--base-font-size-small);
+    }
 
     &--blog-post {
+      margin-bottom: 0;
       padding-left: 20px;
-      margin-bottom: 0 !important;
     }
   }
 
@@ -169,9 +174,9 @@
   &__subject {
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-end;
     margin-top: auto;
     padding: 0 20px 12px;
-    justify-content: flex-end;
 
 
     &-item {
@@ -222,12 +227,12 @@
 
   &__list-item-link {
     display: inline-block;
+    max-width: 100%;
     padding: 8px 0;
+    overflow: hidden;
+    white-space: nowrap;
     text-decoration: none;
     text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 100%;
 
     &:hover {
       text-decoration: underline;
@@ -261,9 +266,34 @@
 
   &__term {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
     grid-gap: var(--container-spacing-mobile);
+    grid-template-columns: repeat(4, 1fr);
+  }
 
+  &-pagination {
+    &.swiper-pagination {
+      &-bullets {
+        &.swiper-pagination-horizontal {
+          position: relative;
+          bottom: auto;
+          padding-top: 12px;
+          padding-bottom: 12px;
+
+          .swiper-pagination-bullet {
+            width: 26px;
+            height: 6px;
+            margin: 0 6px;
+            background: var(--color-green-dark);
+            border-radius: 3px;
+            opacity: .58;
+
+            &-active {
+              opacity: 1;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
@@ -274,3 +304,4 @@
     margin-top: 44px;
   }
 }
+
