SIS2-25: Added custom styling for class field in news slideshow viewmode

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
@@ -131,6 +131,10 @@
     padding-left: 25px;
     font-size: var(--base-font-size-extra-small);
 
+    &--no-icon {
+      padding-left: 0;
+    }
+
     .icon {
       position: absolute;
       top: 50%;
