--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
@@ -154,5 +154,19 @@
       }
     }
   }
+
+  .overview-form {
+    &-contents {
+      grid-template-columns: 1fr;
+
+      @media (--viewport-ms-min) {
+        grid-template-columns: 1fr;
+      }
+
+      @media (--viewport-md-min) {
+        grid-template-columns: 1fr;
+      }
+    }
+  }
 }
 
