--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--sis-search-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--sis-search-page.html.twig
@@ -43,10 +43,10 @@
           <div class="accordion js-accordion">
             <div class="accordion__items">
               <div class="accordion-buttons">
-                <button id="buttonExpandAll" type="button" class="accordion-button__expand button button--ghost">
+                <button id="buttonExpandAll" type="button" class="accordion-button accordion-button__expand">
                   {{ "Expand All"|t }} +
                 </button>
-                <button id="buttonCollapseAll" type="button" class="accordion-button__collapse button button--ghost hide">
+                <button id="buttonCollapseAll" type="button" class="accordion-button accordion-button__collapse hide">
                   {{ "Collapse All"|t }} -
                 </button>
               </div>
