--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--search-field.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--search-field.html.twig
@@ -32,7 +32,7 @@
   <form action="/search" method="get">
     <div class="searchfield-search__input-field">
       <input {{ create_attribute().addClass('input')
-        .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t)
+        .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t).setAttribute('required','required')
         .setAttribute('placeholder', 'Search the entire site'|t)
         .setAttribute('name', 'term')
         .setAttribute('id', 'js-seachfield-search-input') }}>
