--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
@@ -33,10 +33,10 @@
         <div class="overview-form__search-filters js-overview-form__search-filters">
           <div class="accordion js-accordion">
             <div class="accordion-buttons">
-              <button id="buttonExpandAll" type="button" class="accordion-button__expand button button--ghost">
+              <button id="buttonExpandAll" type="button" class="accordion-button accordion-button__expand">
                 {{ "Expand All"|t }} +
               </button>
-              <button id="buttonCollapseAll" type="button" class="accordion-button__collapse button button--ghost hide">
+              <button id="buttonCollapseAll" type="button" class="accordion-button accordion-button__collapse hide">
                 {{ "Collapse All"|t }} -
               </button>
             </div>
