--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
@@ -43,7 +43,7 @@
         <form action="/search" method="get">
           <div class="header-search__input-field">
             <input {{ create_attribute().addClass('input')
-              .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t)
+              .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t).setAttribute('required', 'required')
               .setAttribute('placeholder', 'Search the entire site'|t)
               .setAttribute('name', 'term')
               .setAttribute('id', 'js-header-search-input') }}>
