SIS2-20: Added hero title, went through all custom styles - made sure they're working, added selector for text color (light/dark).

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
@@ -168,6 +168,14 @@
   .section__graphics-bottom {
     display: none;
   }
+
+  &--inverted {
+    color: white;
+  }
+
+  &__content-title {
+    font-size: 36px;
+  }
 }
 
 #block-pageheader .hero {
